--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit&family=Young+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
+  <main class="Recipe">
     <img src="assets/images/image-omelette.jpeg" />
     <h1> Simple Omelette Recipe</h1>
  <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
@@ -50,19 +51,19 @@
   <table>
     <tr>
       <td>Calories</td>
-    <td> 277kcal</td>
+    <td> <strong>277kcal</strong></td>
     </tr>
     <tr>
       <td> Carbs</td>
-      <td> 0g</td>
+      <td> <strong>og</strong></td>
     </tr>
     <tr>
       <td>Protein</td>
-      <td> 20g</td>
+      <td><strong>20g</strong> </td>
     </tr>
     <tr>
       <td> Fat</td>
-      <td>  22g</td>
+      <td> <strong>22g</strong> </td>
     </tr>
    
   </table>
@@ -71,5 +72,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Daniel Kaguru</a>.
   </div>
+</main>
 </body>
 </html>
