--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet"href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit&family=Young+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <img src="assets/images/image-omelette.jpeg" alt="favicon-32x32" width="300" height="200">
-  </header>
+  <main class="Recipe">
+    <img src="assets/image/image-omelette.jpeg" />
     <h1> Simple Omelette Recipe</h1>
  <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
   to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
   
-  <section>
-    <div class="prep-time">
-    <h2>Preparation Time</h2>
+  <section class="prep-time">
+    <h3>Preparation Time</h3>
     <ul>
       <li>Total: Approximately 10 minutes</li>
       <li>Preparation: 5 minutes</li>
       <li>Cooking: 5 minutes</li>
     </ul>
-    </div>
+  </section>
+
     <h2> Ingredients</h2>
     <ul>
       <li>2-3 large eggs</li>
@@ -33,19 +33,17 @@
     </ul>
 <h2>Instructions</h2>
 <ol>
-  <li> Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+  <li> <strong>Beat the eggs:</strong>  In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
     You can add a tablespoon of water or milk for a fluffier texture.</li>
-  <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-  <li>Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+  <li><strong>Heat the pan:</strong>Place a non-stick frying pan over medium heat and add butter or oil.</li>
+  <li><strong>Cook the omelette:</strong>  Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
     the eggs evenly coat the surface.</li>
-  <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-    middle, sprinkle your chosen fillings over one half of the omelette.
-  </li>
-  <li>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-    fillings. Let it cook for another minute, then slide it onto a plate.
-  </li>
-  <li>Enjoy: Serve hot, with additional salt and pepper if needed.
-  </li>
+  <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the 
+    middle, sprinkle your chosen fillings over one half of the omelette.</li>
+  <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the 
+    fillings. Let it cook for another minute, then slide it onto a plate.</li>
+  <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+  
 </ol>
 <h2> Nutrition</h2>
 <p>The table below shows nutritional values per serving without the additional fillings.</p>
@@ -53,26 +51,28 @@
   <table>
     <tr>
       <td>Calories</td>
-    <td> 277kcal</td>
+    <td> <strong>277kcal</strong></td>
     </tr>
     <tr>
       <td> Carbs</td>
-      <td> 0g</td>
+      <td> <strong>og</strong></td>
     </tr>
     <tr>
       <td>Protein</td>
-      <td> 20g</td>
+      <td><strong>20g</strong> </td>
     </tr>
     <tr>
       <td> Fat</td>
-      <td>  22g</td>
+      <td> <strong>22g</strong> </td>
     </tr>
    
   </table>
 </body>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Daniel Kaguru</a>.
-  </div>
+  
+</main>
 </body>
 </html>
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Daniel Kaguru</a>.
+</div>
