--- a/index.html
+++ b/index.html
@@ -1,78 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet"href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Simple Omelette Recipe</title>
+  <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Outfit&family=Young+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="Recipe">
-    <img src="assets/image/image-omelette.jpeg" />
-    <h1> Simple Omelette Recipe</h1>
- <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-  
-  <section class="prep-time">
-    <h3>Preparation Time</h3>
-    <ul>
-      <li>Total: Approximately 10 minutes</li>
-      <li>Preparation: 5 minutes</li>
-      <li>Cooking: 5 minutes</li>
-    </ul>
-  </section>
+  <main class="recipe">
+    <img src="assets/image/omelette.jpeg" alt="Simple Omelette" />
 
-    <h2> Ingredients</h2>
+    <h1>Simple Omelette Recipe</h1>
+    <p>
+      An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+      to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    </p>
+
+    <section class="prep-time">
+      <h3>Preparation Time</h3>
+      <ul>
+        <li><strong>Total:</strong> Approximately 10 minutes</li>
+        <li><strong>Preparation:</strong> 5 minutes</li>
+        <li><strong>Cooking:</strong> 5 minutes</li>
+      </ul>
+    </section>
+
+    <h2>Ingredients</h2>
     <ul>
-      <li>2-3 large eggs</li>
+      <li>2–3 large eggs</li>
       <li>Salt, to taste</li>
       <li>Pepper, to taste</li>
       <li>1 tablespoon of butter or oil</li>
-      <li> Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
     </ul>
-<h2>Instructions</h2>
-<ol>
-  <li> <strong>Beat the eggs:</strong>  In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-    You can add a tablespoon of water or milk for a fluffier texture.</li>
-  <li><strong>Heat the pan:</strong>Place a non-stick frying pan over medium heat and add butter or oil.</li>
-  <li><strong>Cook the omelette:</strong>  Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-    the eggs evenly coat the surface.</li>
-  <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the 
-    middle, sprinkle your chosen fillings over one half of the omelette.</li>
-  <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the 
-    fillings. Let it cook for another minute, then slide it onto a plate.</li>
-  <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
-  
-</ol>
-<h2> Nutrition</h2>
-<p>The table below shows nutritional values per serving without the additional fillings.</p>
-  </section>
-  <table>
-    <tr>
-      <td>Calories</td>
-    <td> <strong>277kcal</strong></td>
-    </tr>
-    <tr>
-      <td> Carbs</td>
-      <td> <strong>og</strong></td>
-    </tr>
-    <tr>
-      <td>Protein</td>
-      <td><strong>20g</strong> </td>
-    </tr>
-    <tr>
-      <td> Fat</td>
-      <td> <strong>22g</strong> </td>
-    </tr>
-   
-  </table>
-</body>
-  
-</main>
+
+    <h2>Instructions</h2>
+    <ol>
+      <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+      <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+      <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+      <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+      <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+      <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+    </ol>
+
+    <h2>Nutrition</h2>
+    <p>The table below shows nutritional values per serving without the additional fillings.</p>
+    <table>
+      <tr>
+        <td>Calories</td>
+        <td><strong>277kcal</strong></td>
+      </tr>
+      <tr>
+        <td>Carbs</td>
+        <td><strong>0g</strong></td>
+      </tr>
+      <tr>
+        <td>Protein</td>
+        <td><strong>20g</strong></td>
+      </tr>
+      <tr>
+        <td>Fat</td>
+        <td><strong>22g</strong></td>
+      </tr>
+    </table>
+  </main>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Daniel Kaguru</a>.
+  </div>
 </body>
 </html>
-<div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Daniel Kaguru</a>.
-</div>
