pulled image successfully

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main class="recipe">
-    <img src="assets/image/omelette.jpeg" alt="Simple Omelette" />
+    <img src="assets/images/omelette.jpeg" alt="Simple Omelette">
 
     <h1>Simple Omelette Recipe</h1>
     <p>
